# auth-service

./: Cargo.toml  Makefile  docker-compose.yml
migrations/2025-11-14-120912-0000_users/: up.sql
src/: main.rs  schema.rs
src/db/: postgres.rs
src/handlers/: user_handlers.rs
src/models/: user_models.rs
src/repo/: user_repo.rs
